external-crates/move/crates/move-compiler/tests/move_2024/matching/counterexample_lits_long.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E04036]: non-exhaustive pattern
  ┌─ tests/move_2024/matching/counterexample_lits_long.move:4:16
  │
4 │         match (x) {
  │                ^ Pattern '_0' not covered
  │
  = When '_0' is not 0, 5, 10, or 2 other values
